adds bandwidth selection

--- a/static/prototype.html
+++ b/static/prototype.html
@@ -35,6 +35,16 @@
                 <input type="number" min="40" value="0">
                 (kbps)
               </div>
+              <div>
+                <div>
+                  <label for="audio">Audio Bandwidth</label>
+                  <input id="audio-bandwidth"type="number" value="40" id="">(kbps)
+                </div>
+                <div>
+                  <label for="video" >Video Bandwidth</label>
+                  <input  id="video-bandwidth" type="number" value="256" id="">(kbps)
+                  </div>
+              </div>
             </div>
             <div id="videoSrcBlk" class="ctrl-section">
             </div>
