adds disabling bandwidth

--- a/static/prototype.html
+++ b/static/prototype.html
@@ -38,11 +38,11 @@
               <div>
                 <div>
                   <label for="audio">Audio Bandwidth</label>
-                  <input id="audio-bandwidth"type="number" value="40" id="">(kbps)
+                  <input class="bandwidth" id="audio-bandwidth"type="number" value="40" id="">(kbps)
                 </div>
                 <div>
                   <label for="video" >Video Bandwidth</label>
-                  <input  id="video-bandwidth" type="number" value="256" id="">(kbps)
+                  <input class="bandwidth" id="video-bandwidth" type="number" value="256" id="">(kbps)
                   </div>
               </div>
             </div>
