--- a/static/prototype.html
+++ b/static/prototype.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/easyrtc/easyrtc.css" />
     <link rel="stylesheet" type="text/css" href="colors.css/css/colors.min.css" />
     <link rel="stylesheet" type="text/css" href="css/prototype.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Assumes global locations for socket.io.js and easyrtc.js -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
