--- a/static/prototype.html
+++ b/static/prototype.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="/easyrtc/easyrtc.js"></script>
     <script type="text/javascript" src="js/demo_multistream.js"></script>
   </head>
-  <body>
+  <body class="disconnected">
         <div id="demoContainer">
           <div id="connectControls">
             <div class="ctrl-section">
@@ -45,6 +45,7 @@
             <div id="videoSrcBlk" class="ctrl-section">
             </div>
           <div class="ctrl-section">
+            chrome://webrtc-internals/
           </div>
           </div>
           <div id="videos">
